# ollama-rust-api

./: Cargo.toml  README.md
src/: lib.rs  request.rs
src/model/: chat.rs  embedding.rs  generate.rs  mod.rs  models.rs  parameter.rs
