[package]
name = "ollama-rust-api"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-stream = "0.1.17"
chrono = { version = "0.4", features = ["serde"]}